--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/primeicons@7.0.0/primeicons.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <title>%VITE_BAR_NAME%</title>
 </head>
 
 <body>
