--- a/front/index.html
+++ b/front/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/primeicons@7.0.0/primeicons.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>%VITE_BAR_NAME%</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <link rel="stylesheet" href="https://unpkg.com/primeicons@7.0.0/primeicons.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>%VITE_BAR_NAME%</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
